src/index.css
/* ---RESETS */
*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
a {
  text-decoration: none;
}
ul {
  list-style-type: none;
  padding: 0;
}

/* ---ROOT VARS */
:root {
  --primary: #27182d;
  --secondary: #d58e69;
  --font: "Montserrat", sans-serif;
  --inspect: solid white 1px;
}

/* ---MAIN STYLES */

body {
  font-family: var(--font);
  min-height: 100vh;
  background: var(--primary);
  color: var(--secondary);
}
main {
  margin: 0 auto;
  width: 90vw;
  max-width: 1050px;
}

/* ---HEADER COMPONENT */

.logo-wrapper {
  width: 100%;
  text-align: center;

  & img {
    max-width: 250px;

    @media only screen and (max-width: 450px) {
      height: 150px;
    }
    @media only screen and (max-width: 300px) {
      height: 100px;
    }
  }
}

/* ---FILTERS COMPONENT */
.filters-container {
  margin: 30px 0 20px 0;

  .btns-wrapper {
    display: flex;
    justify-content: center;
    gap: 10px;

    .filter-btn {
      color: var(--primary);
      padding: 4px;
      width: 100px;
      font-family: var(--font);
      font-size: 13px;
      font-weight: 500;
      text-transform: capitalize;
      background: var(--secondary);
      border: none;
      border-radius: 6px;
      cursor: pointer;
      transition: 250ms ease;

      &:hover,
      &:active {
        background-color: #eedccf;
      }

      @media only screen and (max-width: 450px) {
        font-size: 11px;
      }
      @media only screen and (max-width: 300px) {
        display: none;
      }
    }
  }

  @media only screen and (max-width: 450px) {
    margin: 25px 0 15px 0;
  }
}

/* ---GRID COMPONENT */

.viewport-error {
  display: none;
  text-align: center;
  color: red;
  font-size: 13px;
  font-weight: 500;

  @media only screen and (max-width: 300px) {
    display: block;
  }
}

h1 {
  /* margin-bottom: 20px; */
  text-align: center;
  text-transform: capitalize;
  font-size: 22px;
  font-weight: 600;

  @media only screen and (max-width: 450px) {
    font-size: 18px;
  }
  @media only screen and (max-width: 300px) {
    display: none;
  }
}

.assortment-container {
  position: relative;
  margin: 20px 0;
  display: grid;
  gap: 30px;
  grid-template-columns: repeat(auto-fit, minmax(400px, 450px));
  place-content: center;

  @media only screen and (max-width: 450px) {
    margin: 10px 0;
    gap: 20px;
    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
  }

  @media only screen and (max-width: 300px) {
    display: none;
  }
}

/* ---ITEM COMPONENT */

.item-container {
  border: 1px solid var(--secondary);
  border-radius: 10px;
  padding: 10px 20px;

  @media only screen and (max-width: 450px) {
    padding: 10px;
  }

  .product-wrapper {
    display: flex;
    align-items: center;
    gap: 30px;

    .product-img {
      height: 240px;
    }

    .description-wrapper {
      line-height: 21px;

      & h2 {
        text-transform: capitalize;
        font-size: 16px;
      }
      .type {
        font-size: 14px;
        margin-bottom: 20px;
        text-transform: capitalize;
        font-weight: 400;
      }
      .sub-text {
        font-size: 14px;
      }
      .price {
        margin-top: 20px;
        font-size: 14px;
      }
      .emph {
        font-weight: 600;
      }
      .capitalize {
        text-transform: capitalize;
      }
      .no-stock {
        display: block;
        color: red;
      }
      .strike {
        text-decoration: line-through;
      }
      .info-btn {
        margin-top: 20px;
        padding: 0 5px;
        color: var(--primary);
        font-family: var(--font);
        font-size: 14px;
        font-weight: 500;
        background: var(--secondary);
        border: none;
        border-radius: 6px;
        cursor: pointer;
        transition: 250ms ease;
        display: flex;
        align-items: center;
        gap: 4px;

        .icon {
          margin-top: 5px;
          font-size: 17px;
        }

        &:hover,
        &:active {
          background-color: #eedccf;
        }
      }
    }

    @media only screen and (max-width: 450px) {
      gap: 20px;

      .product-img {
        height: 220px;
      }

      .description-wrapper {
        line-height: 18px;

        & h2 {
          font-size: 14px;
        }
        .type {
          font-size: 13px;
          margin-bottom: 15px;
        }
        .sub-text {
          font-size: 12px;
        }
        .price {
          margin-top: 15px;
          font-size: 13px;
        }
        .info-btn {
          font-size: 12px;

          .icon {
            margin-top: 4px;
            font-size: 15px;
          }
        }
      }
    }
  }

  .info-wrapper {
    margin-top: 15px;
    padding-top: 10px;
    border-top: solid var(--secondary) 1px;

    .info-txt {
      font-size: 14px;
      line-height: 20px;

      @media only screen and (max-width: 450px) {
        font-size: 12px;
        line-height: 18px;
      }
    }
    .btn-wrapper {
      text-align: right;

      .close-btn {
        color: var(--secondary);
        font-family: var(--font);
        font-size: 20px;
        background: none;
        border: none;
        cursor: pointer;
        transition: 250ms ease;
        animation-name: bounce;
        animation-duration: 1500ms;
        animation-timing-function: ease-in-out;
        animation-iteration-count: infinite;

        &:hover,
        &:active {
          color: #eedccf;
        }
      }
    }
  }
}

@keyframes bounce {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-5px);
  }
  100% {
    transform: translateY(0);
  }
}

/* ---GENERAL INFO COMPONENT */
.gen-info-container {
  width: 90%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;

  @media only screen and (max-width: 500px) {
    width: 100%;
  }

  & h4 {
    margin: 20px 0;
    width: fit-content;
    text-transform: capitalize;
    font-size: 22px;
    font-weight: 600;

    @media only screen and (max-width: 450px) {
      font-size: 18px;
    }
  }

  & h5 {
    margin-bottom: 5px;
    font-size: 16px;
    width: 100%;
  }
  .about-txt {
    margin-bottom: 20px;
    font-size: 14px;
    line-height: 21px;
  }

  @media only screen and (max-width: 450px) {
    & h5 {
      margin-bottom: 3px;
      font-size: 14px;
    }
    .about-txt {
      font-size: 12px;
      line-height: 19px;
    }
  }

  @media only screen and (max-width: 300px) {
    display: none;
  }
}

/* ---FOOTER COMPONENT */
footer {
  margin: 20px 0;
  font-weight: 600;
  font-size: 0.813rem;
  text-align: center;
  text-transform: capitalize;

  @media only screen and (max-width: 300px) {
    display: none;
  }
}

